...
  "eventActionEventButton": "Reserve",
  "eventActionCampaignValidated": "I voted!",
  "eventActionEventValidated": "I'm coming!",
  "moduleCentralassociation": "Centralassociation",
  "moduleCentralassociationDescription": "Aggregator of association links",
  "adminAccountTypes": "Account types",
  "adminAdd": "Add",
  "adminAddAssociation": "Add association",
  "adminAddedGroup": "Group created",
  "adminAddedLoaner": "Lender added",
  "adminAddedMember": "Member added",
  "adminAddedSchool": "School created",
  "adminAddedStructure": "Structure added",
...
  "adminDeleteGroup": "Delete group?",
  "adminDeleteGroupConfirmation": "Are you sure you want to delete this group?",
  "adminDeleteSchool": "Delete school?",
  "adminDeleteUsers": "Delete users",
  "adminDeleting": "Deleting",
  "adminDeletingError": "Error while deleting",
  "adminDescription": "Description",
  "adminEdit": "Edit",
  "adminEditAssociation": "Edit association : {associationName}",
  "@adminEditAssociation": {
    "description": "Edit association",
    "placeholders": {
      "associationName": {
...
  "adminMembers": "Members",
  "adminMembershipAddingError": "Error while adding (likely due to overlapping dates)",
  "adminMemberships": "Memberships",
  "adminMembershipUpdatingError": "Error while updating (likely due to overlapping dates)",
  "adminMinimum": "Minimum",
  "adminModifyPermissions": "Modify permissions",
  "adminName": "Name",
  "adminNoGroup": "No group",
  "adminNoManager": "No manager selected",
  "adminNoMember": "No member",
  "adminNoMembership": "No membership",
  "adminNoMoreLoaner": "No lender available",
  "adminNoSchool": "No school",
...
  "amapPresentation1": "The AMAP (association for the preservation of small-scale farming) is a service offered by the Planet&Co association of ECL. You can receive products (fruit and vegetable baskets, juices, jams...) directly on campus!\n\nOrders must be placed before Friday at 9 PM and are delivered on campus on Tuesday from 1:00 PM to 1:45 PM (or from 6:15 PM to 6:30 PM if you can't come at 
  "amapPresentation2": "\n\nFeel free to contact us if you have any issues!",
  "amapPrice": "Price",
  "amapProduct": "product",
  "amapProductInDelivery": "Product in an unfinished delivery",
  "amapProducts": "Products",
  "amapQuantity": "Quantity",
  "amapRequiredDate": "Date is required",
  "amapSeeMore": "See more",
  "amapThe": "The",
  "amapUnlock": "Unlock",
  "amapUnlockedDelivery": "Delivery unlocked",
  "amapUnlockingDelivery": "Unlock delivery?",
...
    }
  },
  "othersVersion": "Version",
  "paiementAccept": "Accept",
  "paiementAccessPage": "Access the page",
  "paiementAdd": "Add",
  "paiementAddedSeller": "Seller added",
  "paiementAddFunds": "Add Funds",
  "paiementAddingSellerError": "Error while adding seller",
  "paiementAddingStoreError": "Error while adding the store",
  "paiementAddSeller": "Add seller",
  "paiementAddStore": "Add store",
  "paiementAddThisDevice": "Add this device",
  "paiementAdmin": "Administrator",
  "paiementAmount": "Amount",
  "paiementAskDeviceActivation": "Device activation request",
  "paiementAStore": "a store",
...
  "paiementBalanceAfterTopUp": "Balance after top-up:",
  "paiementBalanceAfterTransaction": "Balance after payment: ",
  "paiementBank": "Collect",
  "paiementBillingSpace": "Billing page",
  "paiementCameraPermissionRequired": "Camera permission required",
  "paiementCameraPerssionRequiredDescription": "To scan a QR Code, you must allow camera access.",
  "paiementCanBank": "Can collect payments",
  "paiementCanCancelTransaction": "Can cancel transactions",
  "paiementCanManageEvents": "Can manage ticket events",
  "paiementCanManageSellers": "Can manage sellers",
  "paiementCanSeeHistory": "Can view history",
  "paiementCantLaunchURL": "Can't open link",
  "paiementClose": "Close",
  "paiementCompletePayment": "Complete payment",
  "paiementConfirmPayment": "Confirm Payment",
  "paiementConfirmYourPurchase": "Confirm your purchase",
  "paiementCreate": "Create",
...
  "paiementScanNoMembership": "No membership",
  "paiementScanNoMembershipConfirmation": "This product is not available to non-members. Confirm the payment?",
  "paiementSeeHistory": "View history",
  "paiementSelectAssociation": "Select an association",
  "paiementSelected": "Selected",
  "paiementSelectStructure": "Select a structure",
  "paiementSellerError": "You are not a seller of this store",
  "paiementSellerRigths": "Seller rights",
  "paiementSellersOf": "Sellers of",
  "paiementSettings": "Settings",
  "paiementSpent": "Spent",
  "paiementStats": "Stats",
  "paiementStoreBalance": "Store balance",
  "paiementStoreDeleted": "Store deleted",
  "paiementStoreName": "Store name",
...
